# rspamd-debian

./: rspamd_1.6.2.orig.tar.gz.delta  rspamd_1.6.2.orig.tar.gz.id  rspamd_1.6.3.orig.tar.gz.delta  rspamd_1.6.3.orig.tar.gz.id  rspamd_1.6.4.orig.tar.gz.delta  rspamd_1.6.4.orig.tar.gz.id  rspamd_1.6.5.orig.tar.gz.delta  rspamd_1.6.5.orig.tar.gz.id  rspamd_1.6.6.orig.tar.gz.delta  rspamd_1.6.6.orig.tar.gz.id  rspamd_1.7.0.orig.tar.gz.delta  rspamd_1.7.0.orig.tar.gz.id  rspamd_1.7.1.orig.tar.gz.delta  rspamd_1.7.1.orig.tar.gz.id  rspamd_1.7.2.orig.tar.gz.delta  rspamd_1.7.2.orig.tar.gz.id  rspamd_1.7.3.orig.tar.gz.delta  rspamd_1.7.3.orig.tar.gz.id  rspamd_1.7.4.orig.tar.gz.delta  rspamd_1.7.4.orig.tar.gz.id  rspamd_1.7.5.orig.tar.gz.delta  rspamd_1.7.5.orig.tar.gz.id  rspamd_1.7.6.orig.tar.gz.delta  rspamd_1.7.6.orig.tar.gz.id  rspamd_1.7.7.orig.tar.gz.delta  rspamd_1.7.7.orig.tar.gz.id  rspamd_1.7.8.orig.tar.gz.delta  rspamd_1.7.8.orig.tar.gz.id  rspamd_1.7.9.orig.tar.gz.delta  rspamd_1.7.9.orig.tar.gz.id  rspamd_1.8.0.orig.tar.gz.delta  rspamd_1.8.0.orig.tar.gz.id  rspamd_1.8.1.orig.tar.gz.delta  rspamd_1.8.1.orig.tar.gz.id  rspamd_1.8.3.orig.tar.xz.delta  rspamd_1.8.3.orig.tar.xz.id  rspamd_1.9.0.orig.tar.xz.delta  rspamd_1.9.0.orig.tar.xz.id  rspamd_1.9.4.orig.tar.xz.delta  rspamd_1.9.4.orig.tar.xz.id  (+10 more)
conf/: common.conf
contrib/siphash/: siphash.c  siphash.h  siphash_internal.h
debian/: NEWS  changelog  control  copyright  dirs  gbp.conf  postinst  postrm  prerm  rspamd.links  rspamd.lintian-overrides  rspamd.logrotate  rspamd.manpages  rspamd.triggers  rules  salsa-ci.yml  watch
debian/man/: readme.md  rspamd_stats.8  rspamd_stats.8.md
debian/missing-sources/: codejar.js  d3evolution.js  d3pie.js  fontawesome.js  jquery.stickytabs.js  linenumbers.js  prism.js
debian/patches/: 0001-fix-perl-sheebang.patch  0002-Append-CXX-to-the-list-of-needed-languages.patch  0003-add-versions-to-shared-libraries.patch  0004-drop-js-scripts-packaged-by-Debian.patch  0005-drop-unused-examples-directory.patch  0006-do-not-install-fonts-packaged-by-Debian.patch  0007-drop-ipv6-test-by-binding-to-random-port.patch  0007-license-problem-convert-utf-code.patch  0008-Allow-hyperscan-on-i386-platform.patch  0008-gcc10-ftbfs.patch  0009-enable-lto-ipo.patch  001_fix-perl-sheebang.patch  001_fix-typo-missmatch.patch  0101-Add-sanity-checks-for-actions-thresholds.patch  0102-Avoid-error-messages-on-connect.patch  0103-Fix-cache-key.patch  0104-Fix-handling-of-skip-skip_process-http-flags.patch  0105-Fix-Status-tab-display-for-scanned-0.patch  0106-Fix-smtp-date-syntax-definition.patch  0107-Smtp_date-Fix-2-digits-years-between-00-and-49.patch  0108-Ratelimit-Add-implicit-score.patch  0109-fix-potential-error-if-fdtld-and-mdtld-nil.patch  0110-Slightly-improve-logging.patch  0111-Use-dup-fd-in-milter-handler-to-avoid-races-with-the.patch  0112-Fix-quit-command-processing.patch  series
debian/source/: lintian-overrides
interface/: README.md  index.html
src/rdns/: .cproject  .project  CMakeLists.txt  README.md
src/rdns/contrib/libottery/: CMakeLists.txt  ottery-internal.h
src/rdns/contrib/tweetnacl/: CMakeLists.txt
src/rdns/test/: CMakeLists.txt  dns_curve.c  dns_regress.c
(+10 files in other folders)
